--- a/index.html
+++ b/index.html
@@ -57,44 +57,39 @@
         font-family: inherit;
       }
 
-
-      .input-section{
+      .input-section {
         display: flex;
         flex-direction: column;
-        gap:0.5rem
-
+        gap: 0.5rem;
       }
 
-      #output{
+      #output {
         display: flex;
         flex-direction: column;
         margin: 0 auto;
         align-items: center;
-
       }
-      .distribution-section{
+      .distribution-section {
         margin-bottom: 1rem;
-
-      }      .distribution-section h3{
+      }
+      .distribution-section h3 {
         text-align: center;
-        
       }
 
-      .distribution{
-display: grid;
-max-width: 80%;
-margin: 0 auto;
-    grid-template-columns: 1fr 3fr 1fr;
-    align-items: center;
-    padding: 2rem;
+      .distribution {
+        display: grid;
+        max-width: 80%;
+        margin: 0 auto;
+        grid-template-columns: 1fr 3fr 1fr;
+        align-items: center;
+        padding: 2rem;
       }
-      .copyBtn{
-       padding: 1rem;
-    width: 37%;
+      .copyBtn {
+        padding: 1rem;
+        width: 37%;
       }
-    </style> 
-
-</head>
+    </style>
+  </head>
   <body>
     <div class="app">
       <h1>Distribute SR#</h1>
@@ -133,149 +128,169 @@ margin: 0 auto;
         </div>
       </div>
     </div>
-    </body>
-</html>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
     <script>
-        document.getElementById('pool-form').addEventListener('submit', function(event) {
-            event.preventDefault();
+      document
+        .getElementById("pool-form")
+        .addEventListener("submit", function (event) {
+          event.preventDefault();
 
+          const pool1Count = parseInt(
+            document.getElementById("pool1-count").value
+          );
+          const pool2Count = parseInt(
+            document.getElementById("pool2-count").value
+          );
+          const fileInput = document.getElementById("file-upload");
 
-            const pool1Count = parseInt(document.getElementById('pool1-count').value);
-            const pool2Count = parseInt(document.getElementById('pool2-count').value);
-            const fileInput = document.getElementById('file-upload');
+          if (fileInput.files.length === 0) {
+            alert("Please choose a file first.");
+            return;
+          }
 
+          const file = fileInput.files[0];
+          const reader = new FileReader();
 
+          reader.onload = function (event) {
+            const data = new Uint8Array(event.target.result);
+            const workbook = XLSX.read(data, { type: "array" });
+            const sheetName = workbook.SheetNames[0];
+            const worksheet = XLSX.utils.sheet_to_json(
+              workbook.Sheets[sheetName]
+            );
 
-            if (fileInput.files.length === 0) {
-                alert("Please choose a file first.");
+            const pool1Members = [
+              "RCHARY",
+              "ESDASARIVI",
+              "IY0990B",
+              "ILLASAIP",
+              "KANADARC",
+              "ESKUMARG1",
+              "ESMUDUTHAN",
+              "ESTHAKURR1",
+              "BANDAGAN",
+            ];
+
+            let pool1EmailSRs = [];
+            let pool2EmailSRs = [];
+            let pool1RemainingSRs = [];
+            let pool2RemainingSRs = [];
+
+            // Distribute SRs linked to "Email" source first
+            worksheet.forEach((row) => {
+              const owner = row["Owner Login"];
+              const sr = row["SR#"];
+              const source = row["Source"];
+
+              // Skip SRs whose owner is in the exclusion list
+              const excludedOwners = ["AKONAKA", "CANANUMULLA", "BTHUMMA"];
+              if (excludedOwners.includes(owner)) {
                 return;
-            }
+              }
 
-
-            const file = fileInput.files[0];
-            const reader = new FileReader();
-
-
-            reader.onload = function(event) {
-                const data = new Uint8Array(event.target.result);
-                const workbook = XLSX.read(data, { type: 'array' });
-                const sheetName = workbook.SheetNames[0];
-                const worksheet = XLSX.utils.sheet_to_json(workbook.Sheets[sheetName]);
-
-
-                const pool1Members = [
-                    'RCHARY', 'ESDASARIVI', 'IY0990B', 'ILLASAIP',
-                    'KANADARC', 'ESKUMARG1', 'ESMUDUTHAN', 'ESTHAKURR1', 'BANDAGAN'
-                ];
-
-
-                let pool1EmailSRs = [];
-                let pool2EmailSRs = [];
-                let pool1RemainingSRs = [];
-                let pool2RemainingSRs = [];
-
-
-                // Distribute SRs linked to "Email" source first
-                worksheet.forEach(row => {
-                    const owner = row['Owner Login'];
-                    const sr = row['SR#'];
-                    const source = row['Source'];
-
-
-                    if (source === 'Email') {
-                        if (pool1Members.includes(owner)) {
-                            pool1EmailSRs.push(sr);
-                        } else {
-                            pool2EmailSRs.push(sr);
-                        }
-                    } else {
-                        // Add to remaining arrays for later distribution
-                        if (pool1Members.includes(owner)) {
-                            pool1RemainingSRs.push(sr);
-                        } else {
-                            pool2RemainingSRs.push(sr);
-                        }
-                    }
-                });
-
-
-                // Distribute SRs linked to "Email" source
-                const pool1EmailDistribution = distributeSRs(pool1EmailSRs, pool1Count);
-                const pool2EmailDistribution = distributeSRs(pool2EmailSRs, pool2Count);
-
-
-                // Distribute remaining SRs
-                const pool1RemainingDistribution = distributeSRs(pool1RemainingSRs, pool1Count);
-                const pool2RemainingDistribution = distributeSRs(pool2RemainingSRs, pool2Count);
-
-
-                // Combine and display results
-                displayDistribution(pool1EmailDistribution, 'pool1-distribution');
-                displayDistribution(pool2EmailDistribution, 'pool2-distribution');
-                displayDistribution(pool1RemainingDistribution, 'pool1-distribution');
-                displayDistribution(pool2RemainingDistribution, 'pool2-distribution');
-            };
-
-
-            reader.readAsArrayBuffer(file);
-        });
-
-
-        function distributeSRs(srs, count) {
-            const distribution = {};
-            for (let i = 0; i < count; i++) {
-                distribution[`Pool Member ${i + 1}`] = [];
-            }
-
-
-            let index = 0;
-            srs.forEach(sr => {
-                distribution[`Pool Member ${index + 1}`].push(sr);
-                index = (index + 1) % count;
+              if (source === "Email") {
+                if (pool1Members.includes(owner)) {
+                  pool1EmailSRs.push(sr);
+                } else {
+                  pool2EmailSRs.push(sr);
+                }
+              } else {
+                // Add to remaining arrays for later distribution
+                if (pool1Members.includes(owner)) {
+                  pool1RemainingSRs.push(sr);
+                } else {
+                  pool2RemainingSRs.push(sr);
+                }
+              }
             });
 
+            //AKONAKA CANANUMULLA BTHUMMA
 
-            return distribution;
+            // Distribute SRs linked to "Email" source
+            const pool1EmailDistribution = distributeSRs(
+              pool1EmailSRs,
+              pool1Count
+            );
+            const pool2EmailDistribution = distributeSRs(
+              pool2EmailSRs,
+              pool2Count
+            );
+
+            // Distribute remaining SRs
+            const pool1RemainingDistribution = distributeSRs(
+              pool1RemainingSRs,
+              pool1Count
+            );
+            const pool2RemainingDistribution = distributeSRs(
+              pool2RemainingSRs,
+              pool2Count
+            );
+
+            // Combine and display results
+            displayDistribution(pool1EmailDistribution, "pool1-distribution");
+            displayDistribution(pool2EmailDistribution, "pool2-distribution");
+            displayDistribution(
+              pool1RemainingDistribution,
+              "pool1-distribution"
+            );
+            displayDistribution(
+              pool2RemainingDistribution,
+              "pool2-distribution"
+            );
+          };
+
+          reader.readAsArrayBuffer(file);
+        });
+
+      function distributeSRs(srs, count) {
+        const distribution = {};
+        for (let i = 0; i < count; i++) {
+          distribution[`Pool Member ${i + 1}`] = [];
         }
 
+        let index = 0;
+        srs.forEach((sr) => {
+          distribution[`Pool Member ${index + 1}`].push(sr);
+          index = (index + 1) % count;
+        });
 
+        return distribution;
+      }
 
-function copyToClipboard(text,copyButton) {
-    const tempInput = document.createElement('input');
-    document.body.appendChild(tempInput);
-    tempInput.value = text;
-    tempInput.select();
-    document.execCommand('copy');
-    document.body.removeChild(tempInput);
-    copyButton.innerText='Copied ✅'
+      function copyToClipboard(text, copyButton) {
+        const tempInput = document.createElement("input");
+        document.body.appendChild(tempInput);
+        tempInput.value = text;
+        tempInput.select();
+        document.execCommand("copy");
+        document.body.removeChild(tempInput);
+        copyButton.innerText = "Copied ✅";
 
-    setTimeout(function(){
-    copyButton  .innerHTML='Copy'
-    },1000)
-    // alert('Copied to clipboard!');
+        setTimeout(function () {
+          copyButton.innerHTML = "Copy";
+        }, 1000);
+        // alert('Copied to clipboard!');
+      }
 
-}
-
-        function displayDistribution(distribution, elementId) {
-    const container = document.getElementById(elementId);
-    container.innerHTML = `<h3>${elementId}:</h3>`;
-    for (const [member, srs] of Object.entries(distribution)) {
-        const div = document.createElement('div');
-        div.className = 'distribution';
-        div.innerHTML = `<strong>${member}</strong> ${srs.join(' or ')}`;
-        const copyButton = document.createElement('button');
-        copyButton.className='copyBtn'
-        copyButton.innerText = 'Copy';
-        copyButton.style.marginLeft = '10px';
-        copyButton.onclick = function() {
-            copyToClipboard(srs.join(' or '),copyButton);
-        };
-        div.appendChild(copyButton);
-        container.appendChild(div);
-    }
-}
-
+      function displayDistribution(distribution, elementId) {
+        const container = document.getElementById(elementId);
+        container.innerHTML = `<h3>${elementId}:</h3>`;
+        for (const [member, srs] of Object.entries(distribution)) {
+          const div = document.createElement("div");
+          div.className = "distribution";
+          div.innerHTML = `<strong>${member}</strong> ${srs.join(" or ")}`;
+          const copyButton = document.createElement("button");
+          copyButton.className = "copyBtn";
+          copyButton.innerText = "Copy";
+          copyButton.style.marginLeft = "10px";
+          copyButton.onclick = function () {
+            copyToClipboard(srs.join(" or "), copyButton);
+          };
+          div.appendChild(copyButton);
+          container.appendChild(div);
+        }
+      }
     </script>
-</body>
+  </body>
 </html>
